# CIL-Project

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  evaluate.py  graph_cut.py  groundtruth_visualizer.py  inference.py  multiple_model_inference.py  prediction_visualizer.py  pyproject.toml  run_slime.py  slime_vision_basic_model  spp.py  stupid_slime_inference.py  submission.py  train.py  train_cnn_ensembler.py  visualizer.py
Scripts/: submission.py  test_semantic_thinning.py  visualizer.py
ensembler_outputs/: turn_into_01.py
post_processing/: graph_cut.py  visualize_graph_cut.ipynb
src/: __init__.py  config.py  conv_crf.py  crf.py  data.py  demo.py  ensembler.py  evaluate.py  infer.py  model.py  patch_granularity_loss.py  slime.py  soft_dice_loss.py  train.py
src/utils/: pascal_visualizer.py  synthetic.py  visualization.py
